# attendx

./: .gitignore  Cargo.toml  justfile
backend/: Cargo.toml
backend/locales/de/: validation.json
backend/locales/ja/: auth.json  user.json
backend/src/: lib.rs  main.rs
backend/src/config/: database.rs
backend/src/constants/: mod.rs
backend/src/graphql/: context.rs  error.rs  mod.rs  schema.rs
backend/src/graphql/middleware/: auth.rs
backend/src/handlers/: auth_handler.rs  mod.rs  organization_handler.rs  user_handler.rs
backend/src/handlers/attendance/: attendance_handler.rs
backend/src/handlers/auth/: auth_handler.rs
backend/src/handlers/organization/: mod.rs  organization_handler.rs
backend/src/handlers/organization_member/: mod.rs  organization_member_handler.rs
backend/src/handlers/user/: user_handler.rs
backend/src/handlers/ws/: attendance_ws.rs
backend/src/models/: attendance_model.rs  organization_member_model.rs  organization_model.rs  user_model.rs
backend/src/repositories/: app_repository.rs  attendance_repository.rs  mod.rs  organization_member_repository.rs  organization_repository.rs  user_repository.rs
backend/src/routes/: app_router.rs  attendance_routes.rs  auth_routes.rs  mod.rs  organization_member_routes.rs  organization_routes.rs  user_routes.rs
backend/src/services/: app_service.rs  attendance_service.rs  mod.rs  organization_member_service.rs  organization_service.rs  user_service.rs
backend/src/tests/api/: attendance.hurl  organization.hurl  organization_member.hurl  user.hurl
backend/src/utils/: auth_utils.rs  http_utils.rs  locale_utils.rs  mod.rs  validation_utils.rs
backend/src/ws/handlers/: attendance_ws.rs  mod.rs
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts
frontend/public/: locales
frontend/src/: lib.rs  main.rs
frontend/src/components/: mod.rs
frontend/src/components/attendance/: attendance_ws_test.rs  mod.rs
frontend/src/components/auth/: auth_form_container.rs  auth_redirect_text.rs  error_messages.rs  google_auth_button.rs  input_field.rs  mod.rs
frontend/src/components/layout/: about.rs  blog.rs  contact.rs  faq.rs  footer.rs  hero.rs  main_layout.rs  mod.rs  navbar.rs  pricing.rs  privacy.rs  section_container.rs  sidebar.rs  terms.rs
frontend/src/components/ui/: mod.rs  navigate_button.rs  toast.rs
frontend/src/constants/: mod.rs
frontend/src/hooks/: mod.rs  use_login_form.rs  use_register_form.rs
frontend/src/pages/: home.rs  login.rs  mod.rs  register.rs
frontend/src/pages/auth/: login.rs  register.rs
frontend/src/pages/dashboard/: mod.rs
frontend/src/store/auth/: actions.rs  api.rs  handlers.rs  helpers.rs  mod.rs  state.rs
frontend/style/: input.css  output.css
shared/: Cargo.toml
shared/locales/de/: attendance.json  auth.json  common.json  organization.json  organization_member.json
shared/locales/en/: attendance.json  auth.json  common.json  organization_member.json
shared/locales/id/: attendance.json  auth.json  common.json  organization_member.json
shared/locales/ja/: attendance.json  auth.json  common.json  organization_member.json
shared/migrations/: 20250628070914_init_schema.sql  20250704091549_init_schema.sql
shared/src/: lib.rs  prelude.rs
shared/src/models/: attendance_model.rs  organization_member_model.rs  organization_model.rs  subscription_model.rs  user_model.rs
shared/src/types/: mod.rs  validation_fields.rs  ws_types.rs
shared/src/types/errors/: common_error.rs  mod.rs
shared/src/types/models/: mod.rs
shared/src/types/requests/: mod.rs
shared/src/utils/: locale_utils.rs  mod.rs  validation_utils.rs
shared/src/validations/: email.rs  mod.rs  name.rs  password.rs  password_confirmation.rs
(+46 files in other folders)
