[package]
name = "attendx_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", features = ["backend"] }
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "1.11.0"
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }
validator = { version = "0.19", features = ["derive"] }
phonenumber = "0.3.7"
once_cell = "1.21.1"
env_logger = "0.11.7"
log = "0.4.27"
regex = "1.11.1"
email_address = "0.2.9"
argon2 = "0.5.3"
rand_core = "0.9.3"
rayon = "1.10.0"
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
actix = "0.13.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
thiserror = "2.0.12"

