[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.19", features = ["derive"] }
serde_json = "1.0.128"
rayon = "1.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
email_address = "0.2.9"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
walkdir = "2.5.0"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }

