[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = []
backend = [
    "sqlx",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.19", features = ["derive"] }
serde_json = "1.0.128"
rayon = "1.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
email_address = "0.2.9"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
log = "0.4.27"
gloo-net = "0.6.0"
leptos = "0.8.2"
thiserror = "2.0.12"

sqlx = { version = "0.8.6", optional = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }
uuid = { version = "1.17.0", features = ["js", "serde", "v4"] }
async-graphql = "7.0.17"
